--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,73 +1,80 @@
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                </ul>
-            </nav>
-<h1 class="heading">UP-CYCLE</h1>
-<p class="slogan">Re-use , Reduce, Recycle</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <h3>Up-Cycle</h3>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact">Get in Touch</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-<br>
-<br>
-<div class="recyclables">
-  <h2>What can be recycled</h2>
-  <div class="paper">
-    <h3>Paper</h3>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+ <h2>What can be recycled</h2>
+    <h5>Paper</h5>
     <p>When it comes to office paper, magazines, newspaper or color paper recycling <br> there is a wide range of
       paper materials that can be diverted from landfill.</p>
-  </div>
 
-  <div class="cardboard">
-    <h3>Cardboard</h3>
+    <h5>Cardboard</h5>
     <p>Be it used boxes, cereal or cardboard packaging all of these can be recycled.</p>
-  </div>
 
-  <div class="plastic">
-    <h3>Plastic</h3>
+    <h5>Plastic</h5>
     Plastic materials are widely recycled and include water and cool drink bottles, <br> cleaning
     agent bottles, crates, pallets and bins, bubble wrap, yoghurt tubs, margarine tubs, <br> ice cream containers and
     bottle caps
-  </div>
 
-  <div class="glass">
-    <h3>Glass</h3>
+    <h5>Glass</h5>
     <p>Glass recycling in South Africa is on the increase. Any clean glass bottles and glass jars</p>
-  </div>
 
-  <div class="metal">
-    <h3>Metal</h3>
+    <h5>Metal</h5>
     <p>Scrap metal is one of the most valuable products you can recycle. The general rule is a <br> product needs to be
       at
       least 50 percent metal from appliances to batteries to clothes hangers</p>
-  </div>
 
-  <div class="cans">
-    <h3>Cans</h3>
+    <h5>Cans</h5>
     <p>Tin and can recycling in South Africa is one of the areas of waste management <br> that is on the increase,
       especially in households. Any aluminium and beverage cans</p>
-  </div>
-</div>
-
-<div>
-
-  <div class="one">
+    </div>
+    <div class="col-sm">
     <form action="/qtyForm" method="POST">
       <div class>
-        <h2>Select Materials For Recycling</h2>
+        <h2>Materials</h2>
       </div>
 
-      <div class="input">
-        <p>Materials</p>
-      </div>
+        <p>Please note that the prices below are estimated and are subject to change.</p>
 
       {{#each material}}
       <div class="input">
         {{this.material_name}} <input type="text" name="{{this.material_name}}"
-          placeholder="{{this.material_name}} is R{{this.price_per_kilogram}} per kg" class="qtyEntered">
+          placeholder=" R{{this.price_per_kilogram}} per kg" class="qtyEntered">
       </div>
       {{/each}}
-      <button class="submitBtn" type="submit">Submit Form</button>
+      <button class="submitBtn btn-success" type="submit">Calculate</button>
     </form>
     <div class="total">
       <h2>Estimated Total R{{total}}</h2>
     </div>
+    </div>
   </div>
+</div>
+
+
+ 
+
+  
