--- a/views/insights.handlebars
+++ b/views/insights.handlebars
@@ -1,114 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                </ul>
-            </nav>
-         <h1 class="heading">UP-CYCLE</h1>
-        <p class="slogan">Re-use , Reduce, Recycle</p>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <h3>Up-Cycle</h3>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">Get in Touch</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div id="carouselExampleCaptions" class="carousel carousel-dark slide mx-auto" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8"></li>
 
 
-<div class="slideshow-container">
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 5</div>
-  <img src="/images/GlobalRecyclingDay-2019.jpg" style="width:100%">
-  <div class="text">One recycled tin can saves enough energy to power a television for three hours.</div>
-</div>
 
-<div class="mySlides fade">
-  <div class="numbertext">2 / 5</div>
-  <img src="/images/bins.jpg" style="width:100%">
-  <div class="text">70% less energy is required to recycle paper compared with making it from raw materials.</div>
-</div>
 
-<div class="mySlides fade">
-  <div class="numbertext">3 / 5</div>
-  <img src="/images/cans.jpg" style="width:100%">
-  <div class="text">The unreleased energy contained in the average dustbin each year could power a television for 5,000 hours.</div>
-</div>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/images/bin.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Did You Know</h5>
+          <p>The unreleased energy contained in the average dustbin each year could power a television for
+            5,000 hours.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/cans.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Did You Know</h5>
 
-<div class="mySlides fade">
-  <div class="numbertext">4 / 5</div>
-  <img src="/images/plastic-bottles.jpg" style="width:100%">
-  <div class="text">The unreleased energy contained in the average dustbin each year could power a television for 5,000 hours.
+          <p>One recycled tin can saves enough energy to power a television for three hours.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/tires.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Did You Know</h5>
+
+          <p>Recycling and reuse of scrap tires has grown from about 11 % in 1990 to over 70 percent today</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/cardboard.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Did You Know</h5>
+
+          <p>The world generates at least 3.5 million tons of plastic and other solid waste a day, 10 times the amount a
+            century ago.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/bottles.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Did You Know</h5>
+
+          <p>Glass is 100% recyclable and can be recycled endlessly without loss in quality or purity. Always choose
+            glass over plastic</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/trash.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Did You Know</h5>
+
+          <p>Eight million metric tons: That's how much plastic we dump into the oceans each year. That's about 17.6
+            billion pounds — or the equivalent of nearly 57,000 blue whales — every single year.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/piles.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Did You Know</h5>
+
+          <p> 70% less energy is required to recycle paper compared with making it from raw materials.
+          </p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/bikes.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Did You Know</h5>
+
+          <p>Recycling steel requires 60% less energy than producing steel from iron ore</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/blackbags.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Did You Know</h5>
+
+          <p>WastePlan collects recyclable waste from about 83 000 households across the peninsula. Because of these
+            collections, we manage to divert 1 142 955 kg of waste from landfill every month</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </a>
   </div>
-</div>
+  <div class="how-it-helps">
+    <div class="card text-center">
+      <div class="card-header">
+        How Recycling Helps
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Recycling Conserves Resources</h5>
+        <p class="card-text"> When we recycle, used materials are converted into new products, reducing the need to
+          consume natural resources.
+          If used materials are not recycled, new products are made by extracting fresh, raw material from the Earth,
+          through mining and forestry.
+          Recycling helps conserve important raw materials and protects natural habitats for the future.</p>
+      </div>
+    </div>
+        <div class="card text-center">
+      <div class="card-body">
+        <h5 class="card-title">Recycling saves energy</h5>
+        <p class="card-text"> Using recycled materials in the manufacturing process uses considerably less energy than that required for
+      producing new products from raw materials – even when comparing all associated costs including transport etc. Plus
+      there are extra energy savings because more energy is required to extract, refine, transport
+      and process raw materials ready for industry compared with providing industry-ready materials.</p>
+      </div>
+    </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">5 / 5</div>
-  <img src="/images/Recycle-World.jpg" style="width:100%">
-  <div class="text">The unreleased energy contained in the average dustbin each year could power a television for 5,000 hours.
+            <div class="card text-center">
+      <div class="card-body">
+        <h5 class="card-title">Recycling helps protect the environment</h5>
+        <p class="card-text">Recycling reduces the need for extracting (mining, quarrying and logging), refining and processing raw materials
+      all of which create substantial air and water pollution. As recycling saves energy it also reduces greenhouse gas
+      emissions, which helps to tackle climate change. Current SA recycling is estimated to save
+      more than 18 million tonnes of CO2 a year – the equivalent to taking 5 million cars off the road.</p>
+      </div>
+    </div>
+
+                <div class="card text-center">
+      <div class="card-body">
+        <h5 class="card-title">Recycling reduces landfill</h5>
+        <p class="card-text">When we recycle, recyclable materials are reprocessed into new products, and as a result the amount of
+      rubbish sent to landfill sites reduces. There are over 826 landfill sites in the SA, The Department of Environmental Affairs (“DEA”) says 98 million tonnes of waste is deposited across South Africa's 826 landfill sites every year.</p>
+      </div>
+    </div>
+
+
+
+
+
+    {{!-- <h5>Recycling Conserves Resources</h5>
+    <p> When we recycle, used materials are converted into new products, reducing the need to consume natural resources.
+      If used materials are not recycled, new products are made by extracting fresh, raw material from the Earth,
+      through mining and forestry.
+      Recycling helps conserve important raw materials and protects natural habitats for the future.</p>
+    <h5>Recycling saves energy</h5>
+    <p>Using recycled materials in the manufacturing process uses considerably less energy than that required for
+      producing new products from raw materials – even when comparing all associated costs including transport etc. Plus
+      there are extra energy savings because more energy is required to extract, refine, transport
+      and process raw materials ready for industry compared with providing industry-ready materials.</p>
+    <h5>Recycling helps protect the environment</h5>
+    <p>Recycling reduces the need for extracting (mining, quarrying and logging), refining and processing raw materials
+      all of which create substantial air and water pollution. As recycling saves energy it also reduces greenhouse gas
+      emissions, which helps to tackle climate change. Current UK recycling is estimated to save
+      more than 18 million tonnes of CO2 a year – the equivalent to taking 5 million cars off the road.</p>
+    <h5>Recycling reduces landfill</h5>
+    <p>When we recycle, recyclable materials are reprocessed into new products, and as a result the amount of
+      rubbish sent to landfill sites reduces. There are over 1,500 landfill sites in the UK, and in 2001, these sites
+      produced a quarter of the UK’s emissions of methane, a powerful greenhouse gas.</p>
+
+  </div> --}}
+
   </div>
-</div>
 
-
-
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
-    <span class="dot" onclick="currentSlide(4)"></span>
-      <span class="dot" onclick="currentSlide(5)"></span> 
- 
-
-</div>
-
-<div class="how-it-helps">
-    <h1>How Recycling Helps</h1>
-    <h2>Recycling Conserves Resources</h2>
-<p> When we recycle, used materials are converted into new products, reducing the need to consume natural resources. If used materials are not recycled, new products are made by extracting fresh, raw material from the Earth, through mining and forestry. 
-Recycling helps conserve important raw materials and protects natural habitats for the future.</p>
-<h2>Recycling saves energy</h2>
-<p>Using recycled materials in the manufacturing process uses considerably less energy than that required for producing new products from raw materials – even when comparing all associated costs including transport etc. Plus there are extra energy savings because more energy is required to extract, refine, transport 
-and process raw materials ready for industry compared with providing industry-ready materials.</p>
-<h2>Recycling helps protect the environment</h2>
-<p>Recycling reduces the need for extracting (mining, quarrying and logging), refining and processing raw materials all of which create substantial air and water pollution. As recycling saves energy it also reduces greenhouse gas emissions, which helps to tackle climate change. Current UK recycling is estimated to save 
-more than 18 million tonnes of CO2 a year – the equivalent to taking 5 million cars off the road.</p>
-<h2>Recycling reduces landfill</h2>
-<p>When we recycle, recyclable materials are reprocessed into new products, and as a result the amount of 
-rubbish sent to landfill sites reduces. There are over 1,500 landfill sites in the UK, and in 2001, these sites
- produced a quarter of the UK’s emissions of methane, a powerful greenhouse gas.</p>
-
-</div>
-
-<script>
-var slideIndex = 0;
-showSlides();
-
-function showSlides() {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
-}</script>
-
-
-
-</div> 
-    
-</div>
+  </div>
 </body>
+
 </html>
