--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,47 +1,132 @@
-.heading {
-    font-family: 'Bangers', cursive;
-    font-size: 3em;
-    color: #7dcea0;
+body {
+    font-family: 'Fraunces', serif;
+}
+
+img {
+    width: 4em;
+    height: 20em;
+}
+
+.navbar-light {
+    margin: 10px;
+}
+
+.navbar-brand {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 50px;
+}
+
+.navbar-nav {
+    margin-left: 1em;
+}
+
+.intro {
+    margin: 8px;
+}
+
+.h-100 {
+    margin: 8px;
+}
+
+.btn-primary {
+    text-align: center;
+}
+
+.card-text {
+    padding: 2em;
+}
+
+.input {
+    width: 0.5em;
+    padding: 10px;
+    font-weight: bold;
 }
 
 .recyclables {
     float: left;
-    margin-top: 1em;
+    /* margin-top: 1em; */
     border: solid 0.5px #7dcea0;
-    padding: 1em;
+    padding: 0.5em;
 }
 
 .one {
     width: 50%;
     float: right;
-    margin-top: 1em;
+    /* margin-top: 1em; */
     border: solid 0.5px #7dcea0;
-    padding: 1em;
+    padding: 0.5em;
 }
 
-.slogan {
+.total {
+    margin-top: 1em;
+}
+
+.carousel {
+    width: 50%;
+}
+
+.w-100 {
+    opacity: 0.5;
+}
+
+.how-it-helps {
+    text-align: center;
+}
+
+.form {
+    border-radius: 10px;
+}
+
+.sub {
+    border-radius: 5px;
+}
+
+.submitBtn {
+    border-radius: 5px;
+}
+
+
+/* .heading {
+    font-family: 'Bangers', cursive;
+    font-size: 3em;
+    color: #7dcea0;
+} */
+
+
+/* .slogan {
     font-weight: bolder;
     font-size: 1.5em;
-}
+} */
 
-nav {
-    /* position: absolute; */
-    /* top: 0;
+
+/* nav { */
+
+
+/* position: absolute; */
+
+
+/* top: 0;
     right: 0;
     left: 0;
     z-index: 2; */
-    display: flex;
+
+
+/* display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 5px 7px 0 15px;
-    margin-top: 6em;
-    /* border: 0.5px solid black; */
-}
+    margin-top: 6em; */
 
-nav li {
+
+/* border: 0.5px solid black; */
+
+
+/* } */
+
+
+/* nav li {
     display: inline-block;
     padding: 1em;
-    /* margin-top: 2em; */
     border: 1px solid #7dcea0;
     border-radius: 1em;
     background-color: #7dcea0;
@@ -49,11 +134,12 @@ nav li {
 
 nav li span {
     padding-left: 5px;
-}
+} */
 
+
+/* 
 li a {
     padding: 5px;
-    /* background-color: ; */
     text-decoration: none;
     color: black;
 }
@@ -100,21 +186,19 @@ h1 {
 .about {
     margin-left: 15em;
     margin-top: 5em;
-    /* border: black 0.5px solid; */
     padding: 1em;
     width: 50em;
     text-align: center;
-}
+} */
 
 
 /* slides */
 
-.slides {
+
+/* .slides {
     position: relative;
     width: 100%;
     max-width: 400px;
-    /* display: flex;
-    flex-wrap: wrap; */
     float: left;
     margin: 0.5em;
 }
@@ -143,26 +227,18 @@ h1 {
     opacity: 0.9;
 }
 
-.input {
-    margin: 10px;
-    width: 0.5em;
-    padding: 10px;
-    font-weight: bold;
-}
-
-.total {}
 
 .slides .btn:hover {
     background-color: purple;
-}
+} */
 
-.contact {
+
+/* .contact {
     position: absolute;
     color: black;
     width: 99%;
     height: 32rem;
     border: black 1px solid;
-    /* background-color: ; */
 }
 
 .center {
@@ -190,13 +266,14 @@ h1 {
     background: #ff4d4d;
     color: white;
 }
+ */
 
-.fa {
+
+/* .fa {
     padding: 0.5em;
     width: 2em;
     text-align: center;
     text-decoration: none;
-    /* margin: 5px 2px; */
     border-radius: 0.5em;
 }
 
@@ -231,15 +308,16 @@ h1 {
 
 * {
     box-sizing: border-box
-}
+} */
 
-
+*/
 /* body {
     font-family: Verdana, sans-serif;
     margin: 0
 } */
 
-.mySlides {
+
+/* .mySlides {
     display: none;
 }
 
@@ -249,21 +327,23 @@ h1 {
 
 img {
     vertical-align: middle;
-}
+} */
 
 
 /* Slideshow container */
 
-.slideshow-container {
+
+/* .slideshow-container {
     width: 30em;
     position: relative;
     margin: auto;
-}
+} */
 
 
 /* Next & previous buttons */
 
-.prev,
+
+/* .prev,
 .next {
     cursor: pointer;
     position: absolute;
@@ -277,28 +357,31 @@ img {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
-}
+} */
 
 
 /* Position the "next button" to the right */
 
-.next {
+
+/* .next {
     right: 0;
     border-radius: 3px 0 0 3px;
-}
+} */
 
 
 /* On hover, add a black background color with a little bit see-through */
 
-.prev:hover,
+
+/* .prev:hover,
 .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
-}
+} */
 
 
 /* Caption text */
 
-.text {
+
+/* .text {
     color: #000000;
     font-size: 1.5em;
     padding: 8px 12px;
@@ -307,23 +390,26 @@ img {
     width: 100%;
     text-align: center;
     font-weight: bolder;
-}
+} */
 
 
 /* Number text (1/3 etc) */
 
-.numbertext {
+
+/* .numbertext {
     color: #f2f2f2;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
 }
+ */
 
 
 /* The dots/bullets/indicators */
 
-.dot {
+
+/* .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -337,12 +423,13 @@ img {
 .active,
 .dot:hover {
     background-color: #717171;
-}
+} */
 
 
 /* Fading animation */
 
-.fade {
+
+/* .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
@@ -366,14 +453,16 @@ img {
         opacity: 1
     }
 }
+ */
 
 
 /* On smaller screens, decrease text size */
 
-@media only screen and (max-width: 300px) {
+
+/* @media only screen and (max-width: 300px) {
     .prev,
     .next,
     .text {
         font-size: 11px
     }
-}
+} */
