--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -7,14 +7,48 @@
 </head>
 
 <body>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                </ul>
-            </nav>
-            <h1 class="heading">UP-CYCLE</h1>
-            <p class="slogan">Re-use , Reduce, Recycle</p>
-    <div class="about">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <h3>Up-Cycle</h3>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contact">Get in Touch</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="card mx-auto" style="width: 50rem;">
+  {{!-- <img src="/images/logo.jpg" class="card-img-top" alt="..."> --}}
+  <div class="card-body text-center" >
+    <h3 class="card-title">About Us</h3>
+    <p class="card-text">We at Up-Cycle strongly believe in the benefits that recycling has on our beautiful planet, but it order to make a big difference
+        we have to start small. We hope to mostly impact the lives of people who make a living off recycling or even those who knew nothing about it by simply
+        giving them everything they need to know in one place.</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Find which items are recyclable</li>
+    <li class="list-group-item">Get an estimate value in Rands for your recyclables</li>
+    <li class="list-group-item">Where you can drop-off those recyclables to get cash</li>
+        <li class="list-group-item">Facts on waste and recycling</li>
+    <li class="list-group-item">How recycling helps the environment</li>
+
+  </ul>
+</div>
+    {{!-- <div class="about">
         <h2>About Us</h2>
     <p> We at Up-Cycle strongly believe in the benefits that recycling has on our beautiful planet, but it order to make a big difference
         we have to start small. We hope to mostly impact the lives of people who make a living off recycling or even those who knew nothing about it by simply
@@ -22,13 +56,13 @@
        <h4>This webapp allows you to:</h4>  
         <ul>
             <li>Find which items are recyclable</li>
-            <li>An estimate in Rands for your recyclables</li>
+            <li>Gives you an estimate in Rands for your recyclables</li>
             <li>Where you can drop-off those recyclables to get cash</li>
             <li>Tips on how to recyle</li>
             <li>How recycling helps the environment</li>
         </ul> 
      </p>
-    </div>
+    </div> --}}
 </body>
 
 </html>
