--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -7,15 +7,47 @@
 </head>
 
 <body>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                </ul>
-            </nav>
-                <h1 class="heading">UP-CYCLE</h1>
-            <p class="slogan">Re-use , Reduce, Recycle</p>
-
-    <div clas="contact">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <h3>Up-Cycle</h3>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contact">Get in Touch</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+<div class="card mx-auto" style="width: 50rem;">
+  <div class="card-body text-center">
+    <h3 class="card-title">We would love to hear from you!</h3>
+    <h5 class="card-subtitle mb-2 text-muted">Whether you have any questions, a suggestion or simply want to know more? We are here to help</h5>
+<form action="mailto:mecayleg@gmail.com" method="post" enctype="text/plain" class="form">
+Your Name:<br>
+<input type="text" name="name"><br>
+Your E-mail:<br>
+<input type="text" name="mail"><br>
+Your Message:<br>
+<input type="text" name="comment" size="50"><br><br>
+<input type="submit" value="Send" class="sub btn-success">
+<input type="reset" value="Reset" class="sub btn-success">
+</form>
+  </div>
+</div>
+    {{!-- <div clas="contact">
 <div class="center">
 <h2>We'd love to hear from you </h2>
 <p>Whether you have any questions, a suggestion or simply want to know more? Our team is here to help </p>
@@ -28,7 +60,7 @@
 
 </div>
 </div>
-</div>
+</div> --}}
 
 </body>
 
