fixed mobile view

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </nav>
-<div class="card mx-auto" style="width: 50rem;">
+<div class="card mx-auto">
   <div class="card-body text-center">
     <h3 class="card-title">We would love to hear from you!</h3>
     <h5 class="card-subtitle mb-2 text-muted">Whether you have any questions, a suggestion or simply want to know more? We are here to help</h5>
@@ -41,7 +41,7 @@ Your Name:<br>
 Your E-mail:<br>
 <input type="text" name="mail"><br>
 Your Message:<br>
-<input type="text" name="comment" size="50"><br><br>
+<input type="text" name="comment" size="40"><br><br>
 <input type="submit" value="Send" class="sub btn-success">
 <input type="reset" value="Reset" class="sub btn-success">
 </form>
