--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </nav>
-        <div class="card mx-auto" style="width: 50rem;">
+        <div class="card mx-auto">
   {{!-- <img src="/images/logo.jpg" class="card-img-top" alt="..."> --}}
   <div class="card-body text-center" >
     <h3 class="card-title">About Us</h3>
