--- a/views/insights.handlebars
+++ b/views/insights.handlebars
@@ -137,6 +137,7 @@
       <span class="visually-hidden">Next</span>
     </a>
   </div>
+
   <div class="how-it-helps">
     <div class="card text-center">
       <div class="card-header">
@@ -151,62 +152,40 @@
           Recycling helps conserve important raw materials and protects natural habitats for the future.</p>
       </div>
     </div>
-        <div class="card text-center">
+    <div class="card text-center">
       <div class="card-body">
         <h5 class="card-title">Recycling saves energy</h5>
-        <p class="card-text"> Using recycled materials in the manufacturing process uses considerably less energy than that required for
-      producing new products from raw materials – even when comparing all associated costs including transport etc. Plus
-      there are extra energy savings because more energy is required to extract, refine, transport
-      and process raw materials ready for industry compared with providing industry-ready materials.</p>
+        <p class="card-text"> Using recycled materials in the manufacturing process uses considerably less energy than
+          that required for
+          producing new products from raw materials – even when comparing all associated costs including transport etc.
+          Plus
+          there are extra energy savings because more energy is required to extract, refine, transport
+          and process raw materials ready for industry compared with providing industry-ready materials.</p>
       </div>
     </div>
 
-            <div class="card text-center">
+    <div class="card text-center">
       <div class="card-body">
         <h5 class="card-title">Recycling helps protect the environment</h5>
-        <p class="card-text">Recycling reduces the need for extracting (mining, quarrying and logging), refining and processing raw materials
-      all of which create substantial air and water pollution. As recycling saves energy it also reduces greenhouse gas
-      emissions, which helps to tackle climate change. Current SA recycling is estimated to save
-      more than 18 million tonnes of CO2 a year – the equivalent to taking 5 million cars off the road.</p>
+        <p class="card-text">Recycling reduces the need for extracting (mining, quarrying and logging), refining and
+          processing raw materials
+          all of which create substantial air and water pollution. As recycling saves energy it also reduces greenhouse
+          gas
+          emissions, which helps to tackle climate change. Current SA recycling is estimated to save
+          more than 18 million tonnes of CO2 a year – the equivalent to taking 5 million cars off the road.</p>
       </div>
     </div>
 
-                <div class="card text-center">
+    <div class="card text-center">
       <div class="card-body">
         <h5 class="card-title">Recycling reduces landfill</h5>
-        <p class="card-text">When we recycle, recyclable materials are reprocessed into new products, and as a result the amount of
-      rubbish sent to landfill sites reduces. There are over 826 landfill sites in the SA, The Department of Environmental Affairs (“DEA”) says 98 million tonnes of waste is deposited across South Africa's 826 landfill sites every year.</p>
+        <p class="card-text">When we recycle, recyclable materials are reprocessed into new products, and as a result
+          the amount of
+          rubbish sent to landfill sites reduces. There are over 826 landfill sites in the SA, The Department of
+          Environmental Affairs (“DEA”) says 98 million tonnes of waste is deposited across South Africa's 826 landfill
+          sites every year.</p>
       </div>
     </div>
-
-
-
-
-
-    {{!-- <h5>Recycling Conserves Resources</h5>
-    <p> When we recycle, used materials are converted into new products, reducing the need to consume natural resources.
-      If used materials are not recycled, new products are made by extracting fresh, raw material from the Earth,
-      through mining and forestry.
-      Recycling helps conserve important raw materials and protects natural habitats for the future.</p>
-    <h5>Recycling saves energy</h5>
-    <p>Using recycled materials in the manufacturing process uses considerably less energy than that required for
-      producing new products from raw materials – even when comparing all associated costs including transport etc. Plus
-      there are extra energy savings because more energy is required to extract, refine, transport
-      and process raw materials ready for industry compared with providing industry-ready materials.</p>
-    <h5>Recycling helps protect the environment</h5>
-    <p>Recycling reduces the need for extracting (mining, quarrying and logging), refining and processing raw materials
-      all of which create substantial air and water pollution. As recycling saves energy it also reduces greenhouse gas
-      emissions, which helps to tackle climate change. Current UK recycling is estimated to save
-      more than 18 million tonnes of CO2 a year – the equivalent to taking 5 million cars off the road.</p>
-    <h5>Recycling reduces landfill</h5>
-    <p>When we recycle, recyclable materials are reprocessed into new products, and as a result the amount of
-      rubbish sent to landfill sites reduces. There are over 1,500 landfill sites in the UK, and in 2001, these sites
-      produced a quarter of the UK’s emissions of methane, a powerful greenhouse gas.</p>
-
-  </div> --}}
-
-  </div>
-
   </div>
 </body>
 
