--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,384 +85,86 @@ img {
     border-radius: 5px;
 }
 
-
-/* .heading {
-    font-family: 'Bangers', cursive;
-    font-size: 3em;
-    color: #7dcea0;
-} */
-
-
-/* .slogan {
-    font-weight: bolder;
-    font-size: 1.5em;
-} */
-
-
-/* nav { */
-
-
-/* position: absolute; */
-
-
-/* top: 0;
-    right: 0;
-    left: 0;
-    z-index: 2; */
-
-
-/* display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 5px 7px 0 15px;
-    margin-top: 6em; */
-
-
-/* border: 0.5px solid black; */
-
-
-/* } */
-
-
-/* nav li {
-    display: inline-block;
-    padding: 1em;
-    border: 1px solid #7dcea0;
-    border-radius: 1em;
-    background-color: #7dcea0;
+.form-style-9 {
+    max-width: 450px;
+    background: #FAFAFA;
+    padding: 30px;
+    margin: 50px auto;
+    box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.35);
+    border-radius: 10px;
+    border: 6px solid #5cb85c;
 }
 
-nav li span {
-    padding-left: 5px;
-} */
-
-
-/* 
-li a {
-    padding: 5px;
-    text-decoration: none;
-    color: black;
+.form-style-9 ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
-ul {
-    list-style: circle;
+.form-style-9 ul li {
+    display: block;
+    margin-bottom: 10px;
+    min-height: 35px;
 }
 
-h1 {
-    text-align: center;
-    color: #7dcea0;
+.form-style-9 ul li .field-style {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    padding: 8px;
+    outline: none;
+    border: 1px solid #5cb85c;
+    -webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -ms-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
 }
 
-.home {
-    padding: 0.5em;
-    background-color: #808080;
-    border-radius: 1em;
-    font-size: 1em;
-    opacity: 0.9;
+.form-style-9 ul li .field-style:focus {
+    box-shadow: 0 0 5px #5cb85c;
+    border: 1px solid #5cb85c;
 }
 
-.how-it-helps {
-    padding: 1em;
+.form-style-9 ul li .field-split {
+    width: 49%;
 }
 
-.home:hover {
-    background-color: purple;
-}
-
-.btn a {
-    text-decoration: none;
-    color: #f2f2f2;
-}
-
-.home a {
-    text-decoration: none;
-    color: #f2f2f2;
-}
-
-.slogan {
-    text-align: center;
-}
-
-.about {
-    margin-left: 15em;
-    margin-top: 5em;
-    padding: 1em;
-    width: 50em;
-    text-align: center;
-} */
-
-
-/* slides */
-
-
-/* .slides {
-    position: relative;
+.form-style-9 ul li .field-full {
     width: 100%;
-    max-width: 400px;
+}
+
+.form-style-9 ul li input.align-left {
     float: left;
-    margin: 0.5em;
 }
 
-.slides img {
+.form-style-9 ul li input.align-right {
+    float: right;
+}
+
+.form-style-9 ul li textarea {
     width: 100%;
-    height: 20em;
-    border-radius: 5px;
-    margin: 1em;
-}
-
-.slides .btn {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: #808080;
-    color: #000000;
-    font-size: 16px;
-    padding: 12px 24px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    text-align: center;
-    opacity: 0.9;
+    height: 100px;
 }
 
 
-.slides .btn:hover {
-    background-color: purple;
-} */
-
-
-/* .contact {
-    position: absolute;
-    color: black;
-    width: 99%;
-    height: 32rem;
-    border: black 1px solid;
-}
-
-.center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-60%, -130%);
-    text-align: center;
-    margin: 5em;
-}
-
-.material-icons {
-    padding: 0.5em;
-    width: 2em;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 0.5em;
-}
-
-.material-icons:hover {
-    opacity: 0.7;
-}
-
-.icon {
-    background: #ff4d4d;
-    color: white;
-}
- */
-
-
-/* .fa {
-    padding: 0.5em;
-    width: 2em;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 0.5em;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-facebook {
-    background: #3B5998;
-    color: white;
-}
-
-.fa-twitter {
-    background: #55ACEE;
-    color: white;
-}
-
-.fa-instagram {
-    background: rgb(250, 243, 0);
-    background: linear-gradient(90deg, rgba(250, 243, 0, 1) 0%, rgba(253, 59, 29, 1) 47%, rgba(252, 69, 232, 1) 100%);
-    color: white;
-}
-
-.fa-whatsapp {
-    background: #00ff00;
-    color: white;
-}
-
-.home {
-    color: black;
-}
-
-* {
-    box-sizing: border-box
-} */
-
-*/
-/* body {
-    font-family: Verdana, sans-serif;
-    margin: 0
-} */
-
-
-/* .mySlides {
-    display: none;
-}
-
-.mySlides img {
-    opacity: 0.5;
-}
-
-img {
-    vertical-align: middle;
-} */
-
-
-/* Slideshow container */
-
-
-/* .slideshow-container {
-    width: 30em;
-    position: relative;
-    margin: auto;
-} */
-
-
-/* Next & previous buttons */
-
-
-/* .prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-} */
-
-
-/* Position the "next button" to the right */
-
-
-/* .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-} */
-
-
-/* On hover, add a black background color with a little bit see-through */
-
-
-/* .prev:hover,
-.next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-} */
-
-
-/* Caption text */
-
-
-/* .text {
-    color: #000000;
-    font-size: 1.5em;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-    font-weight: bolder;
-} */
-
-
-/* Number text (1/3 etc) */
-
-
-/* .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
- */
-
-
-/* The dots/bullets/indicators */
-
-
-/* .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
+/* .form-style-9 ul li input[type="button"],
+.form-style-9 ul li input[type="submit"] {
+    -moz-box-shadow: inset 0px 1px 0px 0px #3985B1;
+    -webkit-box-shadow: inset 0px 1px 0px 0px #3985B1;
+    box-shadow: inset 0px 1px 0px 0px #3985B1;
+    background-color: #216288;
+    border: 1px solid #17445E;
     display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active,
-.dot:hover {
-    background-color: #717171;
+    cursor: pointer;
+    color: #FFFFFF;
+    padding: 8px 18px;
+    text-decoration: none;
+    font: 12px Arial, Helvetica, sans-serif;
 } */
 
 
-/* Fading animation */
-
-
-/* .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-    from {
-        opacity: .4
-    }
-    to {
-        opacity: 1
-    }
-}
-
-@keyframes fade {
-    from {
-        opacity: .4
-    }
-    to {
-        opacity: 1
-    }
-}
- */
-
-
-/* On smaller screens, decrease text size */
-
-
-/* @media only screen and (max-width: 300px) {
-    .prev,
-    .next,
-    .text {
-        font-size: 11px
-    }
+/* .form-style-9 ul li input[type="button"]:hover,
+.form-style-9 ul li input[type="submit"]:hover {
+    background: linear-gradient(to bottom, #2D77A2 5%, #337DA8 100%);
+    background-color: #28739E;
 } */
